fix bg not showing

--- a/src/css/desktop-style.css
+++ b/src/css/desktop-style.css
@@ -157,10 +157,10 @@ background: linear-gradient(90deg, rgba(25,168,85,1) 0%, rgba(118,201,153,1) 23%
     height: 45%;
 }
 #berita1{
-    background: url('/src/images/berita1.webp');
+    background: url('./src/images/berita1.webp');
     background-size: cover;
 }#berita2{
-    background: url('/src/images/berita2.webp');
+    background: url('./src/images/berita2.webp');
     background-size: cover;
 }
 .berita p:nth-child(2){
@@ -215,7 +215,7 @@ background: linear-gradient(90deg, rgba(25,168,85,1) 0%, rgba(118,201,153,1) 23%
     z-index: -99;
     margin-top: -10px;
     content: "";
-    background-image: url('/src/images/pattern.jpg');
+    background-image: url('./src/images/pattern.jpg');
     opacity: .2;
     background-size: cover;
     width: 100%;
@@ -261,7 +261,7 @@ background: linear-gradient(90deg, rgba(25,168,85,1) 0%, rgba(118,201,153,1) 23%
     border-radius: 10px;
     width: 80px;
     height: 80px;
-    background: url('/src/image/onion.jpeg');
+    background: url('./src/image/onion.jpeg');
     background-size: cover;
     margin: auto;
     box-shadow: 0px 0px 3px rgb(66, 66, 66);
